[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/backgrounds/Background.gd" type="Script" id=1]
[ext_resource path="res://src/objects/CoinHandler.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/backgrounds/Cloud.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/levels/Level.gd" type="Script" id=4]
[ext_resource path="res://fonts/PWChalk.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://images/backgrounds/Sunflower Bullet Hell Side Bar.png" type="Texture" id=6]
[ext_resource path="res://sounds/music/level1/Moony Side Up (OGG).ogg" type="AudioStream" id=7]
[ext_resource path="res://src/procgen/EnemySpawner.gd" type="Script" id=8]
[ext_resource path="res://images/backgrounds/Sunflower Bullet Hell L1BG.png" type="Texture" id=9]
[ext_resource path="res://images/backgrounds/Sunflower_Bullet_Hell_Background_Level_1 v2.png" type="Texture" id=10]
[ext_resource path="res://images/frames/Frame1.png" type="Texture" id=11]
[ext_resource path="res://src/UI/Warning.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/menus/LoseMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/UI/LevelStart.tscn" type="PackedScene" id=14]
[ext_resource path="res://sounds/music/level1/Sunny Side Up (OGG).ogg" type="AudioStream" id=15]
[ext_resource path="res://src/chars/Player.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/menus/WinMenu.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/addons/Screenshake.tscn" type="PackedScene" id=18]
[ext_resource path="res://images/backgrounds/SBH SCB V5.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 5 )

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Node2D" parent="."]
modulate = Color( 100, 100, 100, 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]

[node name="MainBG" type="ParallaxLayer" parent="Background/ParallaxBackground"]
modulate = Color( 0.9, 0.9, 0.9, 1 )
motion_mirroring = Vector2( 600, 2119 )
script = ExtResource( 1 )
scroll_velocity_y = 120

[node name="BGRight" type="Sprite" parent="Background/ParallaxBackground/MainBG"]
visible = false
position = Vector2( 480, 270 )
texture = ExtResource( 10 )

[node name="BGMid" type="Sprite" parent="Background/ParallaxBackground/MainBG"]
position = Vector2( 180.772, 0 )
texture = ExtResource( 9 )
centered = false

[node name="BGLeft" type="Sprite" parent="Background/ParallaxBackground/MainBG"]
position = Vector2( -420, 0 )
texture = ExtResource( 9 )
centered = false

[node name="Cloud" parent="Background/ParallaxBackground/MainBG" instance=ExtResource( 3 )]
position = Vector2( 672.572, 377.476 )

[node name="Cloud2" parent="Background/ParallaxBackground/MainBG" instance=ExtResource( 3 )]
position = Vector2( 395.973, -321.193 )

[node name="Cloud3" parent="Background/ParallaxBackground/MainBG" instance=ExtResource( 3 )]
position = Vector2( 535.297, -847.755 )

[node name="WinBG" type="ParallaxLayer" parent="Background/ParallaxBackground"]
visible = false
modulate = Color( 0.9, 0.9, 0.9, 1 )
motion_mirroring = Vector2( 0, 2622 )
script = ExtResource( 1 )
scroll_velocity_y = 120

[node name="BGMid2" type="TextureRect" parent="Background/ParallaxBackground/WinBG"]
margin_right = 960.0
margin_bottom = 2622.0
texture = ExtResource( 19 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGLeft2" type="Sprite" parent="Background/ParallaxBackground/WinBG"]
visible = false
position = Vector2( -420, 0 )
texture = ExtResource( 9 )
centered = false

[node name="Cloud4" parent="Background/ParallaxBackground/WinBG" instance=ExtResource( 3 )]
position = Vector2( 672.572, 377.476 )

[node name="Cloud5" parent="Background/ParallaxBackground/WinBG" instance=ExtResource( 3 )]
position = Vector2( 395.973, -321.193 )

[node name="Cloud6" parent="Background/ParallaxBackground/WinBG" instance=ExtResource( 3 )]
position = Vector2( 535.297, -847.755 )

[node name="Characters" type="Node2D" parent="."]

[node name="Player" parent="Characters" instance=ExtResource( 16 )]
material = null
position = Vector2( 480, 410 )

[node name="Hurt" parent="Characters/Player/Audio" index="2"]
volume_db = 10.0

[node name="Objects" type="Node2D" parent="."]

[node name="CoinHandler" parent="Objects" instance=ExtResource( 2 )]
z_index = -1

[node name="BulletServer" type="BulletServer" parent="."]
max_lifetime = 16.0
pop_on_collide = false
play_area_mode = 1
play_area_rect = Rect2( 165, -10, 620, 520 )
play_area_allow_incoming = true

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Particles" type="Node2D" parent="."]
z_index = 3

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIControl" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelStart" parent="UI/UIControl" instance=ExtResource( 14 )]
margin_top = -5.0
margin_bottom = 35.0
animation_speed = 1.5

[node name="Warning" parent="UI/UIControl" instance=ExtResource( 12 )]
margin_top = -5.0
margin_bottom = 35.0

[node name="Frames" type="Control" parent="UI/UIControl"]
modulate = Color( 0.8, 0.8, 0.8, 1 )
margin_left = 15.7648
margin_top = -42.0393
margin_right = 15.7648
margin_bottom = -42.0393
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame1" type="Sprite" parent="UI/UIControl/Frames"]
visible = false
position = Vector2( -166.921, 336.158 )
texture = ExtResource( 11 )

[node name="Frame2" type="Sprite" parent="UI/UIControl/Frames"]
visible = false
position = Vector2( 1122.56, 336.158 )
texture = ExtResource( 11 )

[node name="Frame3" type="Sprite" parent="UI/UIControl/Frames"]
visible = false
position = Vector2( 883.006, 833.563 )
texture = ExtResource( 11 )

[node name="Frame4" type="Sprite" parent="UI/UIControl/Frames"]
visible = false
position = Vector2( 200.886, 833.563 )
texture = ExtResource( 11 )

[node name="Bottom" type="Control" parent="UI/UIControl/Frames"]
margin_left = 121.246
margin_top = 673.412
margin_right = 161.246
margin_bottom = 713.412
rect_rotation = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sunflower Bullet Hell Side Bar" type="Sprite" parent="UI/UIControl/Frames/Bottom"]
position = Vector2( 43.5449, 266.088 )
rotation = 3.14159
scale = Vector2( 0.15, 0.6 )
texture = ExtResource( 6 )

[node name="Left" type="Control" parent="UI/UIControl/Frames"]
margin_top = 51.0741
margin_right = 40.0
margin_bottom = 91.0741
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sunflower Bullet Hell Side Bar" type="Sprite" parent="UI/UIControl/Frames/Left"]
position = Vector2( 79.7994, 278.056 )
rotation = 3.14159
scale = Vector2( 0.135, 0.7 )
texture = ExtResource( 6 )

[node name="Right" type="Control" parent="UI/UIControl/Frames"]
margin_left = 925.336
margin_right = 965.336
margin_bottom = 40.0
rect_scale = Vector2( -1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sunflower Bullet Hell Side Bar" type="Sprite" parent="UI/UIControl/Frames/Right"]
position = Vector2( 69.144, 365.198 )
rotation = 3.14159
scale = Vector2( 0.135, 0.7 )
texture = ExtResource( 6 )

[node name="Labels" type="Control" parent="UI/UIControl"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wave" type="Label" parent="UI/UIControl/Labels"]
margin_left = 10.0
margin_top = 32.0
margin_right = 180.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "WAVE:
01"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="UI/UIControl/Labels"]
margin_left = 10.0
margin_top = 137.95
margin_right = 180.0
margin_bottom = 214.95
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "TIME:
0:23"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="UI/UIControl/Labels"]
margin_left = 10.0
margin_top = 244.543
margin_right = 180.0
margin_bottom = 373.543
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "WASD/ARROW KEYS
TO MOVE
J/Z TO SHOOT
K/X TO BULLET TIME
SHIFT/C/L TO
MOVE SLOWLY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="UI/UIControl/Labels"]
margin_left = 10.0
margin_top = 434.0
margin_right = 180.0
margin_bottom = 485.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "VERSION:
0.1.5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI/UIControl/Labels"]
margin_left = 800.0
margin_top = 32.758
margin_right = 953.0
margin_bottom = 109.758
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SCORE: 
0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="UI/UIControl/Labels"]
margin_left = 810.0
margin_top = 156.368
margin_right = 950.0
margin_bottom = 233.368
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "LIVES: 
OOO"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graze" type="Label" parent="UI/UIControl/Labels"]
margin_left = 810.0
margin_top = 287.595
margin_right = 950.0
margin_bottom = 364.595
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "GRAZE: 
0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="UI/UIControl/Labels"]
margin_left = 810.0
margin_top = 434.243
margin_right = 950.0
margin_bottom = 471.243
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "FPS: 60"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletCount" type="Label" parent="UI/UIControl/Labels"]
margin_left = 810.0
margin_top = 461.749
margin_right = 950.0
margin_bottom = 485.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "BULLETS: 456"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Label" parent="UI/UIControl/Labels"]
visible = false
margin_left = 790.611
margin_top = 419.016
margin_right = 960.106
margin_bottom = 506.016
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = 0
text = "DEBUG:
R TO RESET
M FOR MENU"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="UI/UIControl"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConditionMenus" type="Control" parent="UI/UIControl"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinMenu" parent="UI/UIControl/ConditionMenus" instance=ExtResource( 17 )]

[node name="LoseMenu" parent="UI/UIControl/ConditionMenus" instance=ExtResource( 13 )]

[node name="Cutscenes" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Node2D" parent="."]

[node name="Theme" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 15 )
volume_db = -2.0
autoplay = true

[node name="BulletTheme" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
volume_db = -80.0
autoplay = true

[node name="Addons" type="Node2D" parent="."]

[node name="Tween" type="Tween" parent="Addons"]

[node name="Camera2D" type="Camera2D" parent="Addons"]
position = Vector2( 480, 270 )
current = true

[node name="Screenshake" parent="Addons/Camera2D" instance=ExtResource( 18 )]

[node name="Timers" type="Node2D" parent="."]

[node name="Wave" type="Timer" parent="Timers"]
wait_time = 10.0
one_shot = true

[node name="Win" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="Timers/Wave" to="Enemies" method="_on_Wave_timeout"]
[connection signal="timeout" from="Timers/Win" to="." method="_on_Win_timeout"]

[editable path="Characters/Player"]

[editable path="UI/UIControl/ConditionMenus/WinMenu"]
